--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
 
 body {
   margin: 0;
@@ -12,4 +12,30 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+section {
+  background-color: #d4d5d8;
+  border-radius: 10px;
+  border: solid 2px #a4a6a8 ;
+  width: 440px;
+  padding: 5px;
+}
+h2 {
+  margin-top: 10px;
+  margin-left: 28px;
+  width: 100%;
+}
+button:hover {
+  background-color: #111;
+  color: #fff;
+}
+button {
+  border: none;
+  border-radius: 25px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 30px;
+  margin-bottom: 8px;
 }
